--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 go.mod
 go.sum
 myfiberapp1
+myfiberapp1-386.exe
 myfiberapp1-amd64.exe
-myfiberapp1-i386.exe
-myfiberapp1-linux-i386
+myfiberapp1-darwin-amd64
+myfiberapp1-linux-386
+myfiberapp1-linux-amd64
